--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Information security
 description: My personal information security journey
-author: inf0seq
+author: Inf0seq
 github: https://github.com/inf0seq
 about: I am pentester, still learning, currently mobile security, and focused on redteaming.
 disqus_shortname: Inf0seq
